--- a/8/lib/sparky-aptus-appcenter/games-board.html
+++ b/8/lib/sparky-aptus-appcenter/games-board.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Board | APTus AppCenter</title>
@@ -58,18 +58,18 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_dreamchess" class="button1"><img src="images/chess.svg" class="appicon"><br />DreamChess</a>
 		</td>
-		<td><a href="aptus://gamboa_eboard" class="button1"><img src="images/chess.svg" class="appicon"><br />Eboard</a>
-		</td>
+		<!--<td><a href="aptus://gamboa_eboard" class="button1"><img src="images/chess.svg" class="appicon"><br />Eboard</a>
+		</td>-->
 		<td><a href="aptus://gamboa_el-ixir" class="button1"><img src="images1/onboard.svg" class="appicon"><br />El-Ixir</a>
 		</td>
 		<td><a href="aptus://gamboa_fairymax" class="button1"><img src="images/chess.svg" class="appicon"><br />Fairymax</a>
 		</td>
 		<td><a href="aptus://gamboa_five-or-more" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Five or More</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_fltk1.3-games" class="button1"><img src="images1/onboard.svg" class="appicon"><br />FLTK1.3 Games</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_gamazons" class="button1"><img src="images/hitori.svg" class="appicon"><br />GAmazons</a>
 		</td>
 		<td><a href="aptus://gamboa_glaurung" class="button1"><img src="images/chess.svg" class="appicon"><br />Glaurung</a>
@@ -80,10 +80,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_gnome-mastermind" class="button1"><img src="images1/onboard.svg" class="appicon"><br />GNOME Mastermind</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_gnome-mines" class="button1"><img src="images/gnome-mines.svg" class="appicon"><br />GNOME Mines</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_gnome-sudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />GNOME Sudoku</a>
 		</td>
 		<td><a href="aptus://gamboa_gnubg" class="button1"><img src="images1/onboard.svg" class="appicon"><br />GNU Backgammon</a>
@@ -94,10 +94,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_grhino" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Grhino</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_gtkatlantic" class="button1"><img src="images1/onboard.svg" class="appicon"><br />GtkAtlantic</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_hachu" class="button1"><img src="images/chess.svg" class="appicon"><br />HaChu</a>
 		</td>
 		<td><a href="aptus://gamboa_hoichess" class="button1"><img src="images/chess.svg" class="appicon"><br />Hoichess</a>
@@ -108,10 +108,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_jigzo" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Jigzo</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_kajongg" class="button1"><img src="images/gnome-mahjongg.svg" class="appicon"><br />Kajongg</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_kcheckers" class="button1"><img src="images/iagno.svg" class="appicon"><br />KCheckers</a>
 		</td>
 		<td><a href="aptus://gamboa_kfourinline" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />KFour In Line</a>
@@ -122,10 +122,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_kjumpingcube" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Kjumpingcube</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_kmahjongg" class="button1"><img src="images/gnome-mahjongg.svg" class="appicon"><br />KMahjongg</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_knavalbattle" class="button1"><img src="images1/onboard.svg" class="appicon"><br />KNaval Battle</a>
 		</td>
 		<td><a href="aptus://gamboa_knights" class="button1"><img src="images/chess.svg" class="appicon"><br />Knights</a>
@@ -136,10 +136,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_kshisen" class="button1"><img src="images/gnome-mahjongg.svg" class="appicon"><br />KShisen</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_ksudoku" class="button1"><img src="images/sudoku.svg" class="appicon"><br />KSudoku</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_mah-jong" class="button1"><img src="images/gnome-mahjongg.svg" class="appicon"><br />Mah-Jong</a>
 		</td>
 		<td><a href="aptus://gamboa_mancala" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Mancala</a>
@@ -150,10 +150,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_openyahtzee" class="button1"><img src="images/gnome-tali.svg" class="appicon"><br />Open Yahtzee</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_peg-e" class="button1"><img src="images/cards.svg" class="appicon"><br />Peg-E</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_peg-solitaire" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Peg-Solitaire</a>
 		</td>
 		<td><a href="aptus://gamboa_pegsolitaire" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Peg Solitaire</a>
@@ -164,10 +164,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_phalanx" class="button1"><img src="images/chess.svg" class="appicon"><br />Phalanx</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_picmi" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Picmi</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_pioneers" class="button1"><img src="images1/onboard.svg" class="appicon"><br />Pioneers</a>
 		</td>
 		<td><a href="aptus://gamboa_pychess" class="button1"><img src="images/chess.svg" class="appicon"><br />Pychess</a>
@@ -178,10 +178,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_scid" class="button1"><img src="images/chess.svg" class="appicon"><br />Scid</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_sjaakii" class="button1"><img src="images/chess.svg" class="appicon"><br />Sjaak II</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_stockfish" class="button1"><img src="images/chess.svg" class="appicon"><br />Stockfish</a>
 		</td>
 		<td><a href="aptus://gamboa_tagua" class="button1"><img src="images/chess.svg" class="appicon"><br />Tagua</a>
@@ -192,10 +192,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamboa_xboard" class="button1"><img src="images/chess.svg" class="appicon"><br />XBoard</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamboa_xchain" class="button1"><img src="images1/onboard.svg" class="appicon"><br />XChain Reaction</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamboa_xmahjongg" class="button1"><img src="images/gnome-mahjongg.svg" class="appicon"><br />Xmahjongg</a>
 		</td>
 		<td><a href="aptus://gamboa_xshisen" class="button1"><img src="images1/onboard.svg" class="appicon"><br />XShisen</a>
