--- a/8/lib/sparky-aptus-appcenter/games-platform.html
+++ b/8/lib/sparky-aptus-appcenter/games-platform.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Platform | APTus AppCenter</title>
@@ -40,8 +40,8 @@ Last update: September 5, 2023 by pavroo
 <div class="column18">
 <tbody>
 	<tr>
-		<td><a href="aptus://gampla_alex4" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Alex the Allegator</a>
-		</td>
+		<!--<td><a href="aptus://gampla_alex4" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Alex the Allegator</a>
+		</td>-->
 		<td><a href="aptus://gampla_amphetamine" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Amphetamine</a>
 		</td>
 		<td><a href="aptus://gampla_asylum" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Asylum</a>
@@ -52,10 +52,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gampla_blobwars" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Blob Wars</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampla_ddnet" class="button1"><img src="images/minecraft.svg" class="appicon"><br />DDNet</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampla_freegish" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Freegish</a>
 		</td>
 		<td><a href="aptus://gampla_gnujump" class="button1"><img src="images/minecraft.svg" class="appicon"><br />GNU Jump</a>
@@ -66,10 +66,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gampla_jumpnbump" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Jump & Bump</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampla_kgoldrunner" class="button1"><img src="images/minecraft.svg" class="appicon"><br />KGold Runner</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampla_mazeofgalious" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Maze of Galious</a>
 		</td>
 		<td><a href="aptus://gampla_nikwi" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Nikwi</a>
@@ -80,10 +80,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gampla_passage" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Passage</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampla_pekka-kana-2" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Pekka Kana 2</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampla_reminiscence" class="button1"><img src="images/minecraft.svg" class="appicon"><br />REminiscence</a>
 		</td>
 		<td><a href="aptus://gampla_seahorse-adventures" class="button1"><img src="images/supertux.svg" class="appicon"><br />Seahorse Adventures</a>
@@ -94,10 +94,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gampla_whichwayisup" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Which Way Is Up</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gampla_xjump" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Xjump</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gampla_xmoto" class="button1"><img src="images/minecraft.svg" class="appicon"><br />Xmoto</a>
 		</td>
 		<td><a href="aptus://gampla_xscavenger" class="button1"><img src="images/minecraft.svg" class="appicon"><br />XScavenger</a>
