--- a/7/lib/sparky-aptus-appcenter/net-others.html
+++ b/7/lib/sparky-aptus-appcenter/net-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 2, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Others | APTus AppCenter</title>
@@ -54,10 +54,20 @@ Last update: August 2, 2023 by pavroo
 		</td>
 	<tr>
 	</tr>
+		<td><a href="aptus://netoth_onionbalance" class="button1"><img src="images/network.svg" class="appicon"><br />OnionBalance</a>
+		</td>
+		<td><a href="aptus://netoth_onioncircuits" class="button1"><img src="images/network.svg" class="appicon"><br />OnionCircuits</a>
+		</td>
+		<td><a href="aptus://netoth_onionprobe" class="button1"><img src="images/network.svg" class="appicon"><br />OnionProbe</a>
+		</td>
 		<td><a href="aptus://netoth_onionshare" class="button1"><img src="images/network.svg" class="appicon"><br />OnionShare</a>
+		</td>
+		<td><a href="aptus://netoth_onionshare-cli" class="button1"><img src="images/terminal.svg" class="appicon"><br />OnionShare CLI</a>
 		</td>
 		<td><a href="aptus://netoth_spideroakone" class="button1"><img src="images/network.svg" class="appicon"><br />SpiderOakONE</a>
 		</td>
+	<tr>
+	</tr>
 		<td><a href="aptus://netoth_warpinator" class="button1"><img src="images/network.svg" class="appicon"><br />Warpinator</a>
 		</td>
 		<td><a href="aptus://netoth_wike" class="button1"><img src="images/comix.svg" class="appicon"><br />Wike</a>
