--- a/7/lib/sparky-aptus-appcenter/office-text.html
+++ b/7/lib/sparky-aptus-appcenter/office-text.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 24, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Text Editors | APTus AppCenter</title>
@@ -138,6 +138,8 @@ Last update: June 24, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://offtex_tilde" class="button1"><img src="images/terminal.svg" class="appicon"><br />Tilde</a>
+		</td>
 		<td><a href="aptus://offtex_vim" class="button1"><img src="images/vim.svg" class="appicon"><br />Vim</a>
 		</td>
 		<td><a href="aptus://offtex_vis" class="button1"><img src="images/text-editor2.svg" class="appicon"><br />Vis</a>
