--- a/8/lib/sparky-aptus-appcenter/media-audiotools.html
+++ b/8/lib/sparky-aptus-appcenter/media-audiotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Tools | APTus AppCenter</title>
@@ -68,8 +68,8 @@ Last update: September 5, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
-		</td>
+		<!--<td><a href="aptus://audtoo_foo-yc20" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Foo YC20</a>
+		</td>-->
 		<td><a href="aptus://audtoo_freedv" class="button1"><img src="images/radio.svg" class="appicon"><br />FreeDV</a>
 		</td>
 		<td><a href="aptus://audtoo_gjacktransport" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />gjacktransport</a>
@@ -80,10 +80,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_guitarix" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Guitarix</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_jaaa" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />JACK and ALSA Audio Analyser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_jack-keyboard" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Jack Keyboard</a>
 		</td>
 		<td><a href="aptus://audtoo_kluppe" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Kluppe</a>
@@ -94,10 +94,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_lmms" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />LMMS</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_milkytracker" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Milky Tracker</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_mixxx" class="button1"><img src="images/mixxx.svg" class="appicon"><br />Mixxx</a>
 		</td>
 		<td><a href="aptus://audtoo_muse" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />MusE</a>
@@ -108,10 +108,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_puredata" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Pure Data</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_qjackctl" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QjackCtl</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_qtractor" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Qtractor</a>
 		</td>
 		<td><a href="aptus://audtoo_qsynth" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />QSynth</a>
@@ -122,10 +122,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_setbfree" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />setBfree</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_simplest-studio" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Simplest Studio</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_sonobus" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SonoBus</a>
 		</td>
 		<td><a href="aptus://audtoo_sooperlooper" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />SooperLooper</a>
@@ -136,10 +136,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://audtoo_soundkonverter" class="button1"><img src="images/sound-juicer.svg" class="appicon"><br />soundKonverter</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://audtoo_tuxguitar" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Tux Guitar</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://audtoo_vkeybd" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vkeybd</a>
 		</td>
 		<td><a href="aptus://audtoo_vmpk" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Vmpk</a>
