--- a/8/lib/sparky-aptus-appcenter/media-videotools.html
+++ b/8/lib/sparky-aptus-appcenter/media-videotools.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 29, 2023 by pavroo
+Last update: October 8, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Video Tools | APTus AppCenter</title>
@@ -76,14 +76,16 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_olive-editor" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Olive Editor</a>
 		</td>
+		<td><a href="aptus://videdi_onionmediax" class="button1"><img src="images/kdenlive.svg" class="appicon"><br />OnionMedia X</a>
+		</td>
 		<td><a href="aptus://videdi_openshot-qt" class="button1"><img src="images/avidemux.svg" class="appicon"><br />OpenShot-Qt</a>
 		</td>
 		<td><a href="aptus://videdi_pitivi" class="button1"><img src="images/avidemux.svg" class="appicon"><br />PiTiVi</a>
 		</td>
-		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_qstopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />qStopmotion</a>
+		</td>
 		<td><a href="aptus://videdi_shorten" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shorten</a>
 		</td>
 		<td><a href="aptus://videdi_shotcut" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Shotcut</a>
@@ -94,11 +96,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_sparky-tube" class="button1"><img src="images0/sparky-tube.svg" class="appicon"><br />Sparky Tube</a>
 		</td>
-
-		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_stopmotion" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Stopmotion</a>
+		</td>
 		<td><a href="aptus://videdi_vcdimager" class="button1"><img src="images/devede.svg" class="appicon"><br />VCDImager</a>
 		</td>
 		<td><a href="aptus://videdi_videomass" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Videomass</a>
@@ -109,10 +110,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://videdi_winff" class="button1"><img src="images/avidemux.svg" class="appicon"><br />WinFF</a>
 		</td>
-		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://videdi_xjadeo" class="button1"><img src="images/avidemux.svg" class="appicon"><br />Xjadeo</a>
+		</td>
 		<td><a href="aptus://videdi_youtube-dl" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube-DL</a>
 		</td>
 		<td><a href="aptus://videdi_youtube-dl-gui" class="button1"><img src="images/youtube.svg" class="appicon"><br />YouTube DL GUI</a>
