--- a/8/lib/sparky-aptus-appcenter/education-games.html
+++ b/8/lib/sparky-aptus-appcenter/education-games.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Education -> Education Games | APTus AppCenter</title>
@@ -56,8 +56,8 @@ Last update: June 13, 2021 by pavroo
 	<tr>
 		<td><a href="aptus://edugam_gamine" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Gamine</a>
 		</td>
-		<td><a href="aptus://edugam_gbrainy" class="button1"><img src="images/gbrainy.svg" class="appicon"><br />gbrainy</a>
-		</td>
+		<!--<td><a href="aptus://edugam_gbrainy" class="button1"><img src="images/gbrainy.svg" class="appicon"><br />gbrainy</a>
+		</td>-->
 		<td><a href="aptus://edugam_granule" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Granule</a>
 		</td>
 		<td><a href="aptus://edugam_kanagram" class="button1"><img src="images/kanagram.svg" class="appicon"><br />Kanagram</a>
@@ -66,10 +66,10 @@ Last update: June 13, 2021 by pavroo
 		</td>
 		<td><a href="aptus://edugam_khangman" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />KHangMan</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://edugam_ktuberling" class="button1"><img src="images/gnome-paint.svg" class="appicon"><br />Ktuberling</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://edugam_laby" class="button1"><img src="images/text-script.svg" class="appicon"><br />Laby</a>
 		</td>
 		<td><a href="aptus://edugam_pianobooster" class="button1"><img src="images/gnome-music.svg" class="appicon"><br />PianoBooster</a>
