--- a/8/lib/sparky-aptus-appcenter/education3.html
+++ b/8/lib/sparky-aptus-appcenter/education3.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Education/Science O-Z | APTus AppCenter</title>
@@ -46,16 +46,16 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat3_optgeo" class="button1"><img src="images/science.svg" class="appicon"><br />Optgeo</a>
 		</td>
-		<td><a href="aptus://educat3_oregano" class="button1"><img src="images/vbox.svg" class="appicon"><br />Oregano</a>
-		</td>
+		<!--<td><a href="aptus://educat3_oregano" class="button1"><img src="images/vbox.svg" class="appicon"><br />Oregano</a>
+		</td>-->
 		<td><a href="aptus://educat3_parley" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Parley</a>
 		</td>
 		<td><a href="aptus://educat3_perlprimer" class="button1"><img src="images/atom.svg" class="appicon"><br />PerlPrimer</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat3_planets" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />Planets</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://educat3_polygen" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />Polygen</a>
 		</td>
 		<td><a href="aptus://educat3_praat" class="button1"><img src="images/podcast.svg" class="appicon"><br />Praat</a>
@@ -66,10 +66,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat3_qutemol" class="button1"><img src="images/atom.svg" class="appicon"><br />QuteMol</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat3_rasmol" class="button1"><img src="images/atom.svg" class="appicon"><br />RasMol</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://educat3_relational" class="button1"><img src="images/science.svg" class="appicon"><br />Relational</a>
 		</td>
 		<td><a href="aptus://educat3_rocs" class="button1"><img src="images/sheets.svg" class="appicon"><br />Rocs</a>
@@ -80,10 +80,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat3_shelxle" class="button1"><img src="images/atom.svg" class="appicon"><br />ShelXle</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat3_skycat" class="button1"><img src="images/dir-network-black.svg" class="appicon"><br />Skycat</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://educat3_spatialite-gui" class="button1"><img src="images/science.svg" class="appicon"><br />Spatialite-GUI</a>
 		</td>
 		<td><a href="aptus://educat3_stellarium" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />Stellarium</a>
@@ -94,10 +94,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat3_tikzit" class="button1"><img src="images/glade.svg" class="appicon"><br />TikZiT</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat3_tilem" class="button1"><img src="images/calc.svg" class="appicon"><br />TilEm</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://educat3_topcat" class="button1"><img src="images/preferences-system-network.svg" class="appicon"><br />TOPCAT</a>
 		</td>
 		<td><a href="aptus://educat3_typespeed" class="button1"><img src="images/keyboard.svg" class="appicon"><br />Type Speed</a>
@@ -108,10 +108,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://educat3_wordnet" class="button1"><img src="images/preferences-desktop-locale.svg" class="appicon"><br />WordNet</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://educat3_wxmaxima" class="button1"><img src="images/science.svg" class="appicon"><br />wxMaxima</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://educat3_xplanet" class="button1"><img src="images/atom.svg" class="appicon"><br />Xplanet</a>
 		</td>
 	</tr>
