--- a/8/lib/sparky-aptus-appcenter/games-emulators.html
+++ b/8/lib/sparky-aptus-appcenter/games-emulators.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Emulators | APTus AppCenter</title>
@@ -42,8 +42,8 @@ Last update: September 5, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://gamemu_atari800" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Atari800</a>
 		</td>
-		<td><a href="aptus://gamemu_blastem" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />BlastEm</a>
-		</td>
+		<!--<td><a href="aptus://gamemu_blastem" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />BlastEm</a>
+		</td>-->
 		<td><a href="aptus://gamemu_dosbox" class="button1"><img src="images1/dosbox.svg" class="appicon"><br />DOSBox</a>
 		</td>
 		<td><a href="aptus://gamemu_dosemu" class="button1"><img src="images1/dosbox.svg" class="appicon"><br />DOSEMU</a>
@@ -54,10 +54,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_gnome-video-arcade" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />GNOME Video Arcade</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_hatari" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Hatari</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_mame" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />MAME</a>
 		</td>
 		<td><a href="aptus://gamemu_mednafen" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Mednafen</a>
@@ -68,10 +68,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_mgba-sdl" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />mGBA SDL</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_nestopia" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Nestopia</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_osmose-emulator" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Osmose</a>
 		</td>
 		<td><a href="aptus://gamemu_retroarch" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />RetroArch</a>
@@ -82,10 +82,10 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamemu_stella" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Stella</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://gamemu_visualboyadvance" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Visual Boy Advance</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://gamemu_virtualjaguar" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Virtual Jaguar</a>
 		</td>
 		<td><a href="aptus://gamemu_yabause" class="button1"><img src="images1/gfceu.svg" class="appicon"><br />Yabause</a>
