--- a/8/lib/sparky-aptus-appcenter/net-communication.html
+++ b/8/lib/sparky-aptus-appcenter/net-communication.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: August 2, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Communication | APTus AppCenter</title>
@@ -129,6 +129,8 @@ Last update: August 2, 2023 by pavroo
 		<td><a href="aptus://netcom_twinkle" class="button1"><img src="images/phone.svg" class="appicon"><br />Twinkle</a>
 		</td>
 		<td><a href="aptus://netcom_weechat" class="button1"><img src="images/im.svg" class="appicon"><br />WeeChat</a>
+		</td>
+		<td><a href="aptus://netcom_whatsapp-for-linux" class="button1"><img src="images/whatsapp.svg" class="appicon"><br />WhatsApp for Linux</a>
 		</td>
 	</tr>
 </tbody>
