--- a/8/lib/sparky-aptus-appcenter/net-webbrowser.html
+++ b/8/lib/sparky-aptus-appcenter/net-webbrowser.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: April 29, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Network -> Web Browsers | APTus AppCenter</title>
@@ -42,8 +42,8 @@ Last update: April 29, 2023 by pavroo
 	<tr>
 		<td><a href="aptus://netweb_badwolf" class="button1"><img src="images/web-browser.svg" class="appicon"><br />BadWolf</a>
 		</td>
-		<td><a href="aptus://netweb_beaker-browser" class="button1"><img src="images0/beaker-browser.png" class="appicon"><br />Beaker</a>
-		</td>
+		<!--<td><a href="aptus://netweb_beaker-browser" class="button1"><img src="images0/beaker-browser.png" class="appicon"><br />Beaker</a>
+		</td>-->
 		<td><a href="aptus://netweb_blisk-browser-stable" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Blisk</a>
 		</td>
 		<td><a href="aptus://netweb_brave-browser" class="button1"><img src="images/brave.svg" class="appicon"><br />Brave</a>
@@ -52,12 +52,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Chromium</a>
 		</td>
-	</tr>
-	<tr>
-		<!--<td><a href="aptus://netweb_cyberfox" class="button1"><img src="images0/cyberfox.png" class="appicon"><br />Cyberfox</a>
-		</td>-->
 		<td><a href="aptus://netweb_dillo" class="button1"><img src="images0/dillo.png" class="appicon"><br />Dillo</a>
 		</td>
+	</tr>
+	<tr>
 		<!--<td><a href="aptus://netweb_dooble" class="button1"><img src="images0/dooble.png" class="appicon"><br />Dooble</a>
 		</td>-->
 		<td><a href="aptus://netweb_elinks" class="button1"><img src="images/terminal.svg" class="appicon"><br />ELinks</a>
@@ -70,10 +68,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_firefox-sparky" class="button1"><img src="images/firefox.svg" class="appicon"><br />Firefox Latest Mozilla Build</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_google-chrome-stable" class="button1"><img src="images/google-chrome.svg" class="appicon"><br />Google Chrome</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_hv3" class="button1"><img src="images/web-browser.svg" class="appicon"><br />hv3</a>
 		</td>
 		<td><a href="aptus://netweb_icecat" class="button1"><img src="images0/icecat.png" class="appicon"><br />IceCat</a>
@@ -84,10 +82,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_librewolf" class="button1"><img src="images0/librewolf.png" class="appicon"><br />Librewolf</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_links2" class="button1"><img src="images/terminal.svg" class="appicon"><br />Links2</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_luakit" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Luakit</a>
 		</td>
 		<td><a href="aptus://netweb_lynx" class="button1"><img src="images/terminal.svg" class="appicon"><br />Lynx</a>
@@ -98,10 +96,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_min" class="button1"><img src="images0/min.png" class="appicon"><br />Min</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_mullvad-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Mullvad Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_netrik" class="button1"><img src="images/terminal.svg" class="appicon"><br />Netrik</a>
 		</td>
 		<td><a href="aptus://netweb_netsurf-gtk" class="button1"><img src="images0/netsurf.png" class="appicon"><br />NetSurf GTK</a>
@@ -112,10 +110,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_otter-browser" class="button1"><img src="images0/otter.png" class="appicon"><br />Otter</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_palemoon" class="button1"><img src="images0/palemoon.png" class="appicon"><br />Pale Moon</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_qutebrowser" class="button1"><img src="images0/qutebrowser.png" class="appicon"><br />qutebrowser</a>
 		</td>
 		<td><a href="aptus://netweb_seamonkey" class="button1"><img src="images0/seamonkey.png" class="appicon"><br />SeaMonkey</a>
@@ -126,10 +124,10 @@ Last update: April 29, 2023 by pavroo
 		</td>
 		<td><a href="aptus://netweb_ungoogled-chromium" class="button1"><img src="images/chromium.svg" class="appicon"><br />Ungoogled Chromium</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://netweb_viper-browser" class="button1"><img src="images/web-browser.svg" class="appicon"><br />Viper Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://netweb_vivaldi-stable" class="button1"><img src="images/vivaldi.svg" class="appicon"><br />Vivaldi</a>
 		</td>
 		<td><a href="aptus://netweb_w3m" class="button1"><img src="images/terminal.svg" class="appicon"><br />w3m</a>
