--- a/8/lib/sparky-aptus-appcenter/office-calculator.html
+++ b/8/lib/sparky-aptus-appcenter/office-calculator.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: January 9, 2022 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Office -> Calculators | APTus AppCenter</title>
@@ -41,7 +41,7 @@ Last update: January 9, 2022 by pavroo
 <tbody>
 	<tr>
 		<tr>
-		<td><a href="aptus://offcal_apcalc" class="button1"><img src="images/calc.svg" class="appicon"><br />apcalc</a>
+		<td><a href="aptus://offcal_calc" class="button1"><img src="images/calc.svg" class="appicon"><br />calc</a>
 		</td>
 		<td><a href="aptus://offcal_galculator" class="button1"><img src="images/calc.svg" class="appicon"><br />Galculator</a>
 		</td>
