--- a/8/lib/sparky-aptus-appcenter/system-others.html
+++ b/8/lib/sparky-aptus-appcenter/system-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: May 30, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>System -> Others | APTus AppCenter</title>
@@ -44,18 +44,18 @@ Last update: May 30, 2023 by pavroo
 		</td>
 		<td><a href="aptus://sysoth_boot-repair" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Boot Repair</a>
 		</td>
-		<td><a href="aptus://sysoth_cpufrequtils" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPUfrequtils</a>
-		</td>
+		<!--<td><a href="aptus://sysoth_cpufrequtils" class="button1"><img src="images/cpuinfo.svg" class="appicon"><br />CPUfrequtils</a>
+		</td>-->
 		<td><a href="aptus://sysoth_fcitx" class="button1"><img src="images/fcitx.svg" class="appicon"><br />Fcitx</a>
 		</td>
 		<td><a href="aptus://sysoth_linux-cpupower" class="button1"><img src="images/terminal.svg" class="appicon"><br />Linux CPU Power</a>
 		</td>
 		<td><a href="aptus://sysoth_mariadb-client" class="button1"><img src="images/sql.svg" class="appicon"><br />MariaDB Client</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://sysoth_mariadb-server" class="button1"><img src="images/sql.svg" class="appicon"><br />MariaDB Server</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysoth_netdata" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Netdata</a>
 		</td>
 		<td><a href="aptus://sysoth_nvidia-settings" class="button1"><img src="images/nvidia.svg" class="appicon"><br />Nvidia Settings</a>
@@ -68,10 +68,10 @@ Last update: May 30, 2023 by pavroo
 		</td>
 		<td><a href="aptus://sysoth_sqlite3" class="button1"><img src="images/sql.svg" class="appicon"><br />SQLite3</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://sysoth_sqlitebrowser" class="button1"><img src="images/sql.svg" class="appicon"><br />SQLite Browser</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://sysoth_timekpr-next" class="button1"><img src="images/clock.svg" class="appicon"><br />Time Keeper Next</a>
 		</td>
 		<td><a href="aptus://sysoth_vulkan-tools" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Vulkan Tools</a>
