--- a/7/lib/sparky-aptus-appcenter/media-audioplayers.html
+++ b/7/lib/sparky-aptus-appcenter/media-audioplayers.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Multimedia -> Audio Players | APTus AppCenter</title>
@@ -140,6 +140,8 @@ Last update: September 5, 2023 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://audpla_spectrum" class="button1"><img src="images/gnome-audio.svg" class="appicon"><br />Spectrum</a>
+		</td>
 		<td><a href="aptus://audpla_spotify-client" class="button1"><img src="images/spotify.svg" class="appicon"><br />Spotify Client</a>
 		</td>
 		<td><a href="aptus://audpla_strawberry" class="button1"><img src="images0/strawberry.svg" class="appicon"><br />Strawberry</a>
