--- a/8/lib/sparky-aptus-appcenter/accessories-display.html
+++ b/8/lib/sparky-aptus-appcenter/accessories-display.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: June 13, 2021 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> Display Managers | APTus AppCenter</title>
@@ -54,8 +54,8 @@ Last update: June 13, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
-		<td><a href="aptus://accdis_lxdm" class="button1"><img src="images/login.svg" class="appicon"><br />LXDM</a>
-		</td>
+		<!--<td><a href="aptus://accdis_lxdm" class="button1"><img src="images/login.svg" class="appicon"><br />LXDM</a>
+		</td>-->
 		<td><a href="aptus://accdis_nodm" class="button1"><img src="images/login.svg" class="appicon"><br />NoDM</a>
 		</td>
 		<td><a href="aptus://accdis_sddm" class="button1"><img src="images/login.svg" class="appicon"><br />SDDM</a>
