--- a/8/lib/sparky-aptus-appcenter/games-strategy.html
+++ b/8/lib/sparky-aptus-appcenter/games-strategy.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 5, 2023 by pavroo
+Last update: December 2, 2023 by pavroo
 -->
 	<head>
 		<title>Games -> Strategy | APTus AppCenter</title>
@@ -120,10 +120,8 @@ Last update: September 5, 2023 by pavroo
 		</td>
 		<td><a href="aptus://gamstr_widelands" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Widelands</a>
 		</td>
-		<td><a href="aptus://gamstr_xscorch"xscorch class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Xscorch</a>
-		</td>
-	</tr>
-	<tr>
+		<!--<td><a href="aptus://gamstr_xscorch"xscorch class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Xscorch</a>
+		</td>-->
 		<td><a href="aptus://gamstr_zec" class="button1"><img src="images/gnome-glines.svg" class="appicon"><br />Z-Shell Empire</a>
 		</td>
 	</tr>
