--- a/7/lib/sparky-aptus-appcenter/accessories-others.html
+++ b/7/lib/sparky-aptus-appcenter/accessories-others.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: September 28, 2022 by pavroo
+Last update: December 19, 2023 by pavroo
 -->
 	<head>
 		<title>Accessories -> Others | APTus AppCenter</title>
@@ -102,14 +102,18 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_qrencode" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />Qrencode</a>
 		</td>
+		<td><a href="aptus://accoth_qt5ct" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt5ct</a>
+		</td>
+		<td><a href="aptus://accoth_qt6ct" class="button1"><img src="images/qt.svg" class="appicon"><br />Qt6ct</a>
+		</td>
 		<td><a href="aptus://accoth_qtqr" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />QtQR</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_rofi" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Rofi</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-about" class="button1"><img src="images/sparky.svg" class="appicon"><br />Sparky About</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_sparky-backlight" class="button1"><img src="images/backlight.svg" class="appicon"><br />Sparky BackLight</a>
 		</td>
 		<td><a href="aptus://accoth_sparky-dashboard" class="button1"><img src="images1/alacarte.svg" class="appicon"><br />Sparky Dashboard</a>
@@ -119,12 +123,12 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_sparky-picom" class="button1"><img src="images/desktop-effects.svg" class="appicon"><br />Sparky Picom</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_synapse" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Synapse</a>
 		</td>
 		<td><a href="aptus://accoth_tint2" class="button1"><img src="images1/panel.svg" class="appicon"><br />Tint2</a>
 		</td>
-	</tr>
-	<tr>
 		<td><a href="aptus://accoth_ulauncher" class="button1"><img src="images/default-icon.svg" class="appicon"><br />Ulauncher</a>
 		</td>
 		<td><a href="aptus://accoth_vala-panel" class="button1"><img src="images1/panel.svg" class="appicon"><br />Vala Panel</a>
@@ -133,6 +137,8 @@ Last update: September 28, 2022 by pavroo
 		</td>
 		<td><a href="aptus://accoth_webapp-manager" class="button1"><img src="images/web-browser.svg" class="appicon"><br />WebApp Manager</a>
 		</td>
+	</tr>
+	<tr>
 		<td><a href="aptus://accoth_xscreensaver" class="button1"><img src="images/screensaver.svg" class="appicon"><br />XScreenSaver</a>
 		</td>
 		<td><a href="aptus://accoth_zbarcam-qt" class="button1"><img src="images1/qtqr.svg" class="appicon"><br />ZBarcam Qt</a>
