--- a/8/lib/sparky-aptus-appcenter/desktops.html
+++ b/8/lib/sparky-aptus-appcenter/desktops.html
@@ -3,7 +3,7 @@
 <!-- 
 APTus AppCenter by pavroo <pavroo@onet.eu> 2018
 License: GNU GPL 3
-Last update: November 2, 2021 by pavroo
+Last update: December 19, 2023 by pavroo
 -->
 	<head>
 		<title>Desktops | APTus AppCenter</title>
@@ -82,6 +82,8 @@ Last update: November 2, 2021 by pavroo
 		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_mlvwm" class="button1"><img src="images/desktop.svg" class="appicon"><br />MLVWM</a>
+		</td>
 		<td><a href="aptus://environment_nscde" class="button1"><img src="images0/nscde.png" class="appicon"><br />NsCDE</a>
 		</td>
 		<td><a href="aptus://environment_openbox" class="button1"><img src="images0/openbox.png" class="appicon"><br />Openbox</a>
@@ -92,10 +94,10 @@ Last update: November 2, 2021 by pavroo
 		</td>
 		<td><a href="aptus://environment_sway" class="button1"><img src="images0/sway.png" class="appicon"><br />Sway</a>
 		</td>
-		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
-		</td>
 	</tr>
 	<tr>
+		<td><a href="aptus://environment_sugar" class="button1"><img src="images0/sugar.svg" class="appicon"><br />Sugar</a>
+		</td>
 		<td><a href="aptus://environment_trinity" class="button1"><img src="images0/tde.png" class="appicon"><br />Trinity</a>
 		</td>
 		<td><a href="aptus://environment_ukui" class="button1"><img src="images0/ukui.png" class="appicon"><br />UKUI</a>
